// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LegacyImageTest ImageRTLTest 1`] = `
{
  "AutomationId": "image-container",
  "Background": "#FFFFFF00",
  "BorderBrush": "#E4000000",
  "BorderThickness": "0,0,0,0",
  "Clip": null,
  "CornerRadius": "0,0,0,0",
  "FlowDirection": "LeftToRight",
  "Height": 300,
  "HorizontalAlignment": "Stretch",
  "Left": 0,
  "Margin": "0,0,0,0",
  "Padding": "0,0,0,0",
  "Top": 0,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 500,
  "XamlType": "Microsoft.ReactNative.ViewPanel",
  "children": [
    {
      "AccessibilityRole": "Image",
      "Left": 0,
      "Top": 0,
      "XamlType": "Windows.UI.Xaml.DependencyObject",
    },
  ],
}
`;

exports[`LegacyImageTest ImageWithBorderTest 1`] = `
{
  "AutomationId": "image-container",
  "Background": "#FFFFFF00",
  "BorderBrush": "#5500FF00",
  "BorderThickness": "10,10,10,10",
  "Clip": null,
  "CornerRadius": "10,10,10,10",
  "FlowDirection": "LeftToRight",
  "Height": 300,
  "HorizontalAlignment": "Stretch",
  "Left": 0,
  "Margin": "0,0,0,0",
  "Padding": "0,0,0,0",
  "Top": 0,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 500,
  "XamlType": "Microsoft.ReactNative.ViewPanel",
  "children": [
    {
      "AccessibilityRole": "Image",
      "Left": 10,
      "Top": 10,
      "XamlType": "Windows.UI.Xaml.DependencyObject",
    },
  ],
}
`;

exports[`LegacyImageTest ImageWithoutBorderTest 1`] = `
{
  "AutomationId": "image-container",
  "Background": "#FFFFFF00",
  "BorderBrush": "#E4000000",
  "BorderThickness": "0,0,0,0",
  "Clip": null,
  "CornerRadius": "0,0,0,0",
  "FlowDirection": "LeftToRight",
  "Height": 300,
  "HorizontalAlignment": "Stretch",
  "Left": 0,
  "Margin": "0,0,0,0",
  "Padding": "0,0,0,0",
  "Top": 0,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 500,
  "XamlType": "Microsoft.ReactNative.ViewPanel",
  "children": [
    {
      "AccessibilityRole": "Image",
      "Left": 0,
      "Top": 0,
      "XamlType": "Windows.UI.Xaml.DependencyObject",
    },
  ],
}
`;

exports[`LegacyImageTest ImageWithoutBorderTestOneMoreClick 1`] = `
{
  "AutomationId": "image-container",
  "Background": "#FFFFFF00",
  "BorderBrush": "#E4000000",
  "BorderThickness": "0,0,0,0",
  "Clip": null,
  "CornerRadius": "0,0,0,0",
  "FlowDirection": "LeftToRight",
  "Height": 300,
  "HorizontalAlignment": "Stretch",
  "Left": 0,
  "Margin": "0,0,0,0",
  "Padding": "0,0,0,0",
  "Top": 0,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 500,
  "XamlType": "Microsoft.ReactNative.ViewPanel",
  "children": [
    {
      "AccessibilityRole": "Image",
      "Left": 0,
      "Top": 0,
      "XamlType": "Windows.UI.Xaml.DependencyObject",
    },
  ],
}
`;
